# gatherplan-client

./: .gitignore  Dockerfile  README.md  pyproject.toml  rxconfig.py
.github/workflows/: ci.yml  google.yml
assets/fonts/: myfont.css
gatherplan_client/: additional_holiday.py  backend_rouuter.py  gatherplan_client.py  index.py  login.py  not_member_login.py  sign_up.py
gatherplan_client/backend/: backend_rouuter.py  check_state.py  join_state.py  login_state.py  make_meeting_state.py  state.py
gatherplan_client/check_meeting/: check_meeting.py  check_meeting_detail.py  check_state.py
gatherplan_client/components/: buffer_box.py  buttons.py  calendar.py  footer.py  form_box.py  header.py  make_meeting_detail_location.py  schema.py  text_box.py
gatherplan_client/join_meeting/: enter_meeting_code.py  join_meeting.py  join_meeting_check.py  join_meeting_date.py  join_meeting_detail.py  join_meeting_result.py  join_meeting_time.py  join_state.py
gatherplan_client/make_meeting/: make_meeting.py  make_meeting_check.py  make_meeting_date.py  make_meeting_detail.py  make_meeting_result.py  make_meeting_state.py  make_meeting_time.py  make_meeting_timeline.py
gatherplan_client/pages/: __init__.py  index.py
gatherplan_client/pages/check_meeting/: __init__.py  change_join_meeting.py  change_meeting.py  check_candidate.py  check_candidate_check.py  check_candidate_result.py  check_meeting.py  (+1 more)
gatherplan_client/reflex_assets/: buttons.py  form_box.py  header.py  schema.py  text_box.py
gatherplan_client/templates/: template.py
test_gather_plan/: test_gather_plan.py
(+24 files in other folders)
