[tool.poetry]
name = "gatherplan-client"
version = "0.1.0"
description = ""
authors = ["wjdqlsdlsp <wjdqlsdlsp@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "0.5.8"
black = "^24.4.0"
pytimekr = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
